style (jazzmin): fix sidebar overflow

--- a/jazzmin/static/jazzmin/css/custom.sass
+++ b/jazzmin/static/jazzmin/css/custom.sass
@@ -115,3 +115,7 @@ input[type=checkbox], input[type=radio]
 
     .container-fluid > .row > div:nth-child(2)
         justify-content: flex-start !important
+
+// Fix jazzmin overflow 
+.sidebar
+    overflow: hidden !important
